# pumoku

./: .flatpak-manifest.json  .gitignore  .gitlab-ci.yml  .kde-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  Notes.md  README.md  REUSE.toml  TODO  logo.png.license  org.kde.pumoku.desktop  org.kde.pumoku.json  org.kde.pumoku.json.license  org.kde.pumoku.metainfo.xml
android/: AndroidManifest.xml  build.gradle  version.gradle.in
android/res/drawable/: splash.xml
icons/: CMakeLists.txt
po/ar/: pumoku.po
po/ca/: pumoku.po
po/ca@valencia/: pumoku.po
po/cs/: pumoku.po
po/de/: pumoku.po
po/es/: pumoku.po
po/eu/: pumoku.po
po/fr/: pumoku.po
po/ga/: pumoku.po
po/he/: pumoku.po
po/it/: pumoku.po
po/ka/: pumoku.po
po/ko/: pumoku.po
po/lt/: pumoku.po
po/nl/: pumoku.po
po/pt_BR/: pumoku.po
po/sk/: pumoku.po
po/sl/: pumoku.po
po/tr/: pumoku.po
po/ug/: pumoku.po
po/uk/: pumoku.po
po/zh_CN/: pumoku.po
po/zh_TW/: pumoku.po
src/: CMakeLists.txt  Messages.sh  app.cpp  app.h  config-pumoku.h.cmake  filemanager.cpp  filemanager.h  gamesmodel.cpp  gamesmodel.h  main.cpp  pumokuconfig.kcfg  pumokuconfig.kcfgc  qqw.cpp  qqw.h  qqwing.cpp  qqwing.hpp  resources.qrc
src/contents/ui/: About.qml  DigitButton.qml  GamePage.qml  GridBoard.qml  Import.qml  Main.qml  MainMenu.qml  PumokuEngine.qml  PumokuListItem.qml  Settings.qml  boardmap.js
